--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -26,6 +26,9 @@
       <div class="mobileladyphoto">
         <img src="assets/image-hero-mobile.png" alt="">
       </div>
+      <div class="tabletladyphoto">
+        <img src="assets/image-hero-tablet.png" alt="">
+      </div>
       <div class="mobilelastlargecontainer">
         <div class="mobilecheckoutcontainer">
           <h2 class="mobilecheckouttext">Check out our most popular courses!</h2>
