--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -29,6 +29,9 @@
       <div class="tabletladyphoto">
         <img src="assets/image-hero-tablet.png" alt="">
       </div>
+      <div class="desktopladyphoto">
+        <img src="assets/image-hero-desktop.png" alt="">
+      </div>
       <div class="mobilelastlargecontainer">
         <div class="mobilecheckoutcontainer">
           <h2 class="mobilecheckouttext">Check out our most popular courses!</h2>
