desktop active state

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -15,7 +15,7 @@
     <div class="mobilemaincontainer">
       <a class="mobileskilleduppertext" href="#">Skilled</a>
       <div class="mobilegetstartedcontainer">
-        <a class="mobilegetstartedtext" href="">Get Started</a>
+        <a class="mobilegetstartedtext" href="#">Get Started</a>
       </div>
       <h1 class="mobilemaximizeskilltext">Maximize skill, minimize budget</h1>
       <p class="mobileourmoderntext">Our modern courses across a range of in-demand skills will give you the
@@ -94,8 +94,8 @@
       </div>
       <div class="mobilefootercontainer">
         <a class="mobilelastpartskilledtext" href="#">Skilled</a>
-        <div class="mobilelastgetstartedcontainer">
-          <a class="mobilegetstartedtext" href="">Get Started</a>
+        <div class="mobilefootergetstartedcontainer">
+          <a class="mobilefootergetstartedtext" href="">Get Started</a>
         </div>
       </div>
     </div>
